package com.github.marcellokim.issuetracker.controller;

public final class IssueController {

    // 여기는 이슈 목록, 이슈 상세, 상태 전이 controller 부분이고, 다른 팀원들이 구현해야 한다.
}
