package com.github.marcellokim.issuetracker.domain;

// 확정 
public enum ActionType {
    CREATED,
    TITLE_DESCRIPTION_UPDATED,
    PRIORITY_CHANGED,
    STATUS_CHANGED,
    ASSIGNMENT_CHANGED,
    DEPENDENCY_CHANGED,
    COMMENTED
}
