package com.github.marcellokim.issuetracker.domain;

public enum IssueStatus {
    NEW,
    ASSIGNED,
    FIXED,
    RESOLVED,
    CLOSED,
    REOPENED,
    DELETED
}
