package com.github.marcellokim.issuetracker.domain;

public enum Role {
    ADMIN,
    PL,
    DEV,
    TESTER
}
