package com.github.marcellokim.issuetracker.service;

public final class AssignmentRecommendationService {

    // 여기는 담당자 추천 정책 service 부분이고, 다른 팀원들이 구현해야 한다.
    // DB 담당자는 추천 조회에 필요한 AssignmentRecommendationRepository/JDBC 쿼리까지만 제공한다.
}
