declare
    incompatible_count number;
begin
    select count(*) into incompatible_count
    from user_tab_columns
    where (table_name = 'USERS' and column_name in ('ID', 'PASSWORD_HASH', 'NAME'))
       or (table_name = 'PROJECTS' and column_name = 'MANAGED_BY_ID')
       or (table_name = 'PROJECT_MEMBERS' and column_name = 'USER_ID')
       or (table_name = 'ISSUES' and column_name in (
            'REPORTER_ID', 'ASSIGNEE_ID', 'VERIFIER_ID', 'FIXER_ID', 'RESOLVER_ID'
       ))
       or (table_name = 'COMMENTS' and column_name = 'WRITER_ID')
       or (table_name = 'ISSUE_HISTORY' and column_name = 'CHANGED_BY_ID');

    if incompatible_count > 0 then
        begin
            execute immediate 'drop table issue_dependencies cascade constraints purge';
        exception
            when others then
                if sqlcode != -942 then raise; end if;
        end;
        begin
            execute immediate 'drop table issue_history cascade constraints purge';
        exception
            when others then
                if sqlcode != -942 then raise; end if;
        end;
        begin
            execute immediate 'drop table comments cascade constraints purge';
        exception
            when others then
                if sqlcode != -942 then raise; end if;
        end;
        begin
            execute immediate 'drop table issues cascade constraints purge';
        exception
            when others then
                if sqlcode != -942 then raise; end if;
        end;
        begin
            execute immediate 'drop table project_members cascade constraints purge';
        exception
            when others then
                if sqlcode != -942 then raise; end if;
        end;
        begin
            execute immediate 'drop table projects cascade constraints purge';
        exception
            when others then
                if sqlcode != -942 then raise; end if;
        end;
        begin
            execute immediate 'drop table users cascade constraints purge';
        exception
            when others then
                if sqlcode != -942 then raise; end if;
        end;
    end if;
end;
/
declare
    table_count number;
begin
    select count(*) into table_count from user_tables where table_name = 'USERS';
    if table_count = 0 then
        execute immediate q'[
            create table users (
                login_id varchar2(50) primary key,
                password varchar2(255) not null,
                role varchar2(20) not null,
                active number(1) default 1 not null,
                created_at timestamp default current_timestamp not null,
                updated_at timestamp default current_timestamp not null,
                constraint chk_users_role check (role in ('ADMIN', 'PL', 'DEV', 'TESTER')),
                constraint chk_users_active check (active in (0, 1))
            )
        ]';
    end if;
end;
/
declare
    table_count number;
begin
    select count(*) into table_count from user_tables where table_name = 'PROJECTS';
    if table_count = 0 then
        execute immediate q'[
            create table projects (
                id number generated by default as identity primary key,
                name varchar2(100) not null,
                description varchar2(1000),
                managed_by_login_id varchar2(50) not null,
                created_date timestamp default current_timestamp not null,
                updated_at timestamp default current_timestamp not null,
                constraint uk_projects_name unique (name),
                constraint fk_projects_manager foreign key (managed_by_login_id) references users(login_id)
            )
        ]';
    end if;
end;
/
declare
    table_count number;
begin
    select count(*) into table_count from user_tables where table_name = 'PROJECT_MEMBERS';
    if table_count = 0 then
        execute immediate q'[
            create table project_members (
                project_id number not null,
                user_login_id varchar2(50) not null,
                joined_at timestamp default current_timestamp not null,
                constraint pk_project_members primary key (project_id, user_login_id),
                constraint fk_project_members_project foreign key (project_id) references projects(id),
                constraint fk_project_members_user foreign key (user_login_id) references users(login_id)
            )
        ]';
    end if;
end;
/
declare
    table_count number;
begin
    select count(*) into table_count from user_tables where table_name = 'ISSUES';
    if table_count = 0 then
        execute immediate q'[
            create table issues (
                id number generated by default as identity primary key,
                project_id number not null,
                title varchar2(200) not null,
                description clob not null,
                reported_date timestamp default current_timestamp not null,
                priority varchar2(20) default 'MAJOR' not null,
                status varchar2(20) default 'NEW' not null,
                reporter_login_id varchar2(50) not null,
                assignee_login_id varchar2(50),
                verifier_login_id varchar2(50),
                fixer_login_id varchar2(50),
                resolver_login_id varchar2(50),
                updated_at timestamp default current_timestamp not null,
                constraint chk_issues_priority check (priority in ('BLOCKER', 'CRITICAL', 'MAJOR', 'MINOR', 'TRIVIAL')),
                constraint chk_issues_status check (status in ('NEW', 'ASSIGNED', 'FIXED', 'RESOLVED', 'CLOSED', 'REOPENED', 'DELETED')),
                constraint fk_issues_project foreign key (project_id) references projects(id),
                constraint fk_issues_reporter foreign key (reporter_login_id) references users(login_id),
                constraint fk_issues_assignee foreign key (assignee_login_id) references users(login_id),
                constraint fk_issues_verifier foreign key (verifier_login_id) references users(login_id),
                constraint fk_issues_fixer foreign key (fixer_login_id) references users(login_id),
                constraint fk_issues_resolver foreign key (resolver_login_id) references users(login_id)
            )
        ]';
    end if;
end;
/
declare
    table_count number;
begin
    select count(*) into table_count from user_tables where table_name = 'COMMENTS';
    if table_count = 0 then
        execute immediate q'[
            create table comments (
                id number generated by default as identity primary key,
                issue_id number not null,
                writer_login_id varchar2(50) not null,
                content clob not null,
                created_date timestamp default current_timestamp not null,
                constraint fk_comments_issue foreign key (issue_id) references issues(id) on delete cascade,
                constraint fk_comments_writer foreign key (writer_login_id) references users(login_id)
            )
        ]';
    end if;
end;
/
declare
    table_count number;
begin
    select count(*) into table_count from user_tables where table_name = 'ISSUE_HISTORY';
    if table_count = 0 then
        execute immediate q'[
            create table issue_history (
                id number generated by default as identity primary key,
                issue_id number not null,
                changed_by_login_id varchar2(50) not null,
                action_type varchar2(40) not null,
                previous_value varchar2(255),
                new_value varchar2(255),
                message clob,
                changed_date timestamp default current_timestamp not null,
                constraint chk_issue_history_action check (action_type in (
                    'CREATED',
                    'TITLE_DESCRIPTION_UPDATED',
                    'PRIORITY_CHANGED',
                    'STATUS_CHANGED',
                    'ASSIGNMENT_CHANGED',
                    'DEPENDENCY_CHANGED',
                    'COMMENTED'
                )),
                constraint fk_issue_history_issue foreign key (issue_id) references issues(id) on delete cascade,
                constraint fk_issue_history_changed_by foreign key (changed_by_login_id) references users(login_id)
            )
        ]';
    end if;
end;
/
declare
    table_count number;
begin
    select count(*) into table_count from user_tables where table_name = 'ISSUE_DEPENDENCIES';
    if table_count = 0 then
        execute immediate q'[
            create table issue_dependencies (
                id number generated by default as identity primary key,
                blocking_issue_id number not null,
                blocked_issue_id number not null,
                discovered_date timestamp default current_timestamp not null,
                constraint uk_issue_dependencies_pair unique (blocking_issue_id, blocked_issue_id),
                constraint chk_issue_dependencies_not_self check (blocking_issue_id <> blocked_issue_id),
                constraint fk_issue_dependencies_blocking foreign key (blocking_issue_id) references issues(id) on delete cascade,
                constraint fk_issue_dependencies_blocked foreign key (blocked_issue_id) references issues(id) on delete cascade
            )
        ]';
    end if;
end;
/
declare
    index_count number;
begin
    select count(*) into index_count from user_indexes where index_name = 'IX_PROJECT_MEMBERS_USER';
    if index_count = 0 then
        execute immediate 'create index ix_project_members_user on project_members(user_login_id)';
    end if;
end;
/
declare
    index_count number;
begin
    select count(*) into index_count from user_indexes where index_name = 'IX_ISSUES_PROJECT_STATUS';
    if index_count = 0 then
        execute immediate 'create index ix_issues_project_status on issues(project_id, status)';
    end if;
end;
/
declare
    index_count number;
begin
    select count(*) into index_count from user_indexes where index_name = 'IX_ISSUES_REPORTER';
    if index_count = 0 then
        execute immediate 'create index ix_issues_reporter on issues(reporter_login_id)';
    end if;
end;
/
declare
    index_count number;
begin
    select count(*) into index_count from user_indexes where index_name = 'IX_ISSUES_ASSIGNEE';
    if index_count = 0 then
        execute immediate 'create index ix_issues_assignee on issues(assignee_login_id)';
    end if;
end;
/
declare
    index_count number;
begin
    select count(*) into index_count from user_indexes where index_name = 'IX_ISSUES_VERIFIER';
    if index_count = 0 then
        execute immediate 'create index ix_issues_verifier on issues(verifier_login_id)';
    end if;
end;
/
declare
    index_count number;
begin
    select count(*) into index_count from user_indexes where index_name = 'IX_COMMENTS_ISSUE';
    if index_count = 0 then
        execute immediate 'create index ix_comments_issue on comments(issue_id)';
    end if;
end;
/
declare
    index_count number;
begin
    select count(*) into index_count from user_indexes where index_name = 'IX_HISTORY_ISSUE_DATE';
    if index_count = 0 then
        execute immediate 'create index ix_history_issue_date on issue_history(issue_id, changed_date)';
    end if;
end;
/
declare
    index_count number;
begin
    select count(*) into index_count from user_indexes where index_name = 'IX_HISTORY_STATUS_FIFO';
    if index_count = 0 then
        execute immediate 'create index ix_history_status_fifo on issue_history(action_type, new_value, changed_date)';
    end if;
end;
/
declare
    index_count number;
begin
    select count(*) into index_count from user_indexes where index_name = 'IX_DEP_BLOCKING';
    if index_count = 0 then
        execute immediate 'create index ix_dep_blocking on issue_dependencies(blocking_issue_id)';
    end if;
end;
/
declare
    index_count number;
begin
    select count(*) into index_count from user_indexes where index_name = 'IX_DEP_BLOCKED';
    if index_count = 0 then
        execute immediate 'create index ix_dep_blocked on issue_dependencies(blocked_issue_id)';
    end if;
end;
/
