@startuml its_dcd_ver2

title Final ITS DCD for Core Workflows

left to right direction
hide circle
hide stereotype
skinparam monochrome true
skinparam shadowing false
skinparam classAttributeIconSize 0
skinparam linetype polyline
skinparam nodesep 55
skinparam ranksep 55
skinparam class {
  BackgroundColor white
  BorderColor black
  FontColor black
  ArrowColor black
}

legend left
  == Visibility Notation ==
  + public operation
  - private attribute
  # protected member
  / derived attribute
  no protected or derived members are currently required
  == Scope Note ==
  ver2 is a core workflow DCD.
  repository, authentication, and clock infrastructure
  dependencies are intentionally omitted.
  Issue-to-User role associations are summarized:
  reporter, assignee, verifier, fixer, resolver.
endlegend

class Project {
  - projectId : ProjectId
  - name : Text
  - description : Text
  - createdDate : DateTime
  --
  + registerIssue(title, description, priority, reporter, now)
  + addIssue(issue)
  + addParticipant(user)
  + removeParticipant(user)
}

class IssueController {
  - ...
  --
  + registerIssue(title, description, priority)
  + addComment(issueId, content)
  + searchIssues(filters)
  + viewIssueDetail(issueId)
  + editIssue(issueId, title, description)
  + changePriority(issueId, newPriority)
  + addDependency(blockingIssueId, blockedIssueId)
  + removeDependency(dependencyId)
}

class AssignmentController {
  - ...
  --
  + startAssignment(issueId)
  + assignIssue(issueId, assigneeId, verifierId)
  + reassignIssue(issueId, assigneeId)
  + changeVerifier(issueId, verifierId)
}

class IssueStateController {
  - ...
  --
  + changeStatus(issueId, targetStatus, comment)
}

class DeletedIssueController {
  - ...
  --
  + viewDeletedIssues(projectId)
  + deleteIssue(issueId)
  + restoreIssue(issueId)
  - enforceDeletedLimit(max)
}

class PermissionPolicy {
  - ...
  --
  + verifyPermission(user, operation, resource)
  + assertCanRegisterIssue(user, project)
  + assertCanAssignIssue(user, issue)
  + assertCanChangeStatus(user, issue, targetStatus)
  + assertCanManageDeletedIssue(user, issue)
  + assertCanManageDependency(user, issue)
  + assertCanChangePriority(user, issue)
}

class AssignmentRecommendationService {
  - ...
  --
  + recommendAssignmentCandidates(issue)
  + findDevAssigneeCandidates(issue)
  + findTesterVerifierCandidates(issue)
}

class Issue {
  - issueId : IssueId
  - title : Text
  - description : Text
  - reportedDate : DateTime
  - priority : Priority
  - status : IssueStatus
  --
  + createWithDefaultPriority(title, description, priority, reporter, now)
  + recordCreation(changedBy, now)
  + addComment(content, writer, now)
  + addHistory(history)
  + verifyPriorityChange(newPriority)
  + changePriority(newPriority, changedBy, now)
  + getAssignmentContext()
  + assignFromNew(assignee, verifier, changedBy, now)
  + assignReopened(assignee, verifier, changedBy, now)
  + reassignAssignee(assignee, changedBy, now)
  + changeVerifier(verifier, changedBy, now)
  + markFixed(dev, comment, now)
  + resolve(tester, comment, now)
  + rejectFix(tester, comment, now)
  + close(pl, comment, now)
  + reopen(pl, comment, now)
  + softDelete(pl, now)
  + restore(pl, now)
  + findDeleteStatusHistory()
  + clearAssignee()
  + clearVerifier()
  + validateDependencyCandidate(blockingIssue)
  + addDependency(blockingIssue, changedBy, now)
  + removeDependency(dependency, changedBy, now)
}

class Comment {
  - commentId : CommentId
  - content : Text
  - createdDate : DateTime
  --
  + ...
}

class IssueHistory {
  - historyId : HistoryId
  - action : ActionType
  - previousValue : Text
  - newValue : Text
  - changedDate : DateTime
  - message : Text
  --
  + ...
}

class IssueDependency {
  - dependencyId : DependencyId
  - discoveredDate : DateTime
  --
  + removeBlockingAndBlockedAssociations()
}

class User {
  - userId : UserId
  - loginId : Text
  - name : Text
  - passwordHash : Text
  - role : Role
  - isActive : Boolean
  --
  + hasRole(role)
  + isActive()
}

enum Role {
  ADMIN
  PL
  DEV
  TESTER
}

enum IssueStatus {
  NEW
  ASSIGNED
  FIXED
  RESOLVED
  CLOSED
  REOPENED
  DELETED
}

enum Priority {
  BLOCKER
  CRITICAL
  MAJOR
  MINOR
  TRIVIAL
}

enum ActionType {
  CREATED
  TITLE_DESCRIPTION_UPDATED
  PRIORITY_CHANGED
  STATUS_CHANGED
  ASSIGNMENT_CHANGED
  DEPENDENCY_CHANGED
  COMMENTED
}

IssueController ..> Project : currentProject
IssueController ..> Issue : targetIssue
IssueController ..> PermissionPolicy : policy

AssignmentController ..> Issue : targetIssue
AssignmentController ..> PermissionPolicy : policy
AssignmentController ..> AssignmentRecommendationService : recommender

IssueStateController ..> Issue : targetIssue
IssueStateController ..> PermissionPolicy : policy

DeletedIssueController ..> Issue : deletedIssue
DeletedIssueController ..> PermissionPolicy : policy

Project "1" *-- "0..*" Issue : contains
User "*" -- "*" Project : participates in
User "1" -- "0..*" Project : manages\n(Admin only)

Issue "1" *-- "0..*" Comment : comments {ordered}
Issue "1" *-- "0..*" IssueHistory : histories {ordered}

IssueDependency "0..*" --> "1" Issue : blockingIssue
IssueDependency "0..*" --> "1" Issue : blockedIssue

Issue --> User : reporter / assignee /\nverifier / fixer / resolver

Comment --> "1" User : writer
IssueHistory --> "1" User : changedBy

Issue --> IssueStatus
Issue --> Priority
IssueHistory --> ActionType
User --> Role

@enduml
